tests/specs/check/check_deno_not_found/deno_not_found/main.ts
/// <reference no-default-lib="true"/>
/// <reference lib="es5" />

Deno;
